--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "prettier": "^2.3.2",
     "tslint": "^6.1.3",
+    "typedoc": "^0.21.9",
+    "typedoc-plugin-markdown": "^3.10.4",
     "typescript": "^4.4.2"
   }
 }
