--- a/.github/workflows/pullrequest.yml
+++ b/.github/workflows/pullrequest.yml
@@ -27,5 +27,9 @@ jobs:
       - name: Instalar Dependencias
         run: npm install
 
+      - name: Limpiar lib
+        run: |
+          rm -Rf lib
+
       - name: Crear Build
         run: npm run ci
