--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ride-dbtypes",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "description": "Proyecto RIDE: Documentos NoSQL para Firestore",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "docs": "node_modules/.bin/typedoc index.ts",
+    "docs": "typedoc index.ts",
     "ci": "npm run build && npm run docs"
   },
   "repository": {
